Major refactoring of CurriculumGenerator
- tried to make code less magical and more readable (not sure if succeeded)
- other minor changes